--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "is-promise": "^4.0.0",
     "math-intrinsics": "^1.1.0",
     "media-typer": "^1.1.0",
+    "mercadopago": "^2.12.0",
     "merge-descriptors": "^2.0.0",
     "mime-db": "^1.54.0",
     "mime-types": "^3.0.2",
